syntax = "proto3";

option csharp_namespace = "CareerCloud.gRPC";
package applicantprofile;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service ApplicantProfile{
	rpc PostApplicantProfile(MultipleApplicantProfiles) returns (google.protobuf.Empty);
    rpc GetApplicantProfile(ApplicantProfileId) returns (ApplicantProfileType);
    rpc GetAllApplicantProfile(google.protobuf.Empty) returns (MultipleApplicantProfiles);
    rpc PutApplicantProfile(MultipleApplicantProfiles) returns (google.protobuf.Empty);
    rpc DeleteApplicantProfile(MultipleApplicantProfiles) returns (google.protobuf.Empty);
}
message ApplicantProfileId{
    string Id = 1;
}
message ApplicantProfileType {
    string Id = 1;                  
    string Login = 2;               
    double CurrentSalary = 3;       
    double CurrentRate = 4;         
    string Currency = 5;            
    string Country = 6;             
    string Province = 7;            
    string Street = 8;              
    string City = 9;                
    string PostalCode = 10;         
}

message MultipleApplicantProfiles{
	repeated ApplicantProfileType applicantprofiles = 1;
}